<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergey.shlypa2.screens.players.PlayersFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPlayerHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/civPlayerAvatar"
                android:layout_width="@dimen/player_holder_height"
                android:layout_height="@dimen/player_holder_height"
                android:layout_marginLeft="@dimen/in_card_horizontal_margin"
                android:layout_marginTop="@dimen/in_card_horizontal_margin"
                android:layout_marginBottom="@dimen/in_card_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/in_card_horizontal_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:hint="@string/name"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_medium"
                app:layout_constraintBottom_toTopOf="@+id/btAddNewPlayer"
                app:layout_constraintLeft_toRightOf="@id/civPlayerAvatar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btAddNewPlayer"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/add_player"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_marginRight="@dimen/medium_margin"
                app:layout_constraintRight_toRightOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btCreateTeam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPlayerHolder" />

    <Button
        android:id="@+id/btCreateTeam"
        style="@style/btNextStyle"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btCreateTeam"
        app:layout_constraintRight_toRightOf="parent"
        app:menu_colorNormal="?attr/colorPrimary"
        app:menu_colorPressed="?attr/colorPrimaryDark"
        app:menu_labels_colorNormal="@color/darkGrey"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:srcCompat="@drawable/ic_add_black_24dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabPlayerUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:src="@drawable/ic_player"
            app:fab_colorNormal="@color/Green"
            app:fab_colorPressed="@color/GreenDark"
            app:fab_label="@string/add_user_player"
            app:fab_size="mini"
            app:layout_constraintBottom_toTopOf="@id/btNextWords"
            app:layout_constraintRight_toRightOf="parent" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabPlayerRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:src="@drawable/ic_dice"
            app:fab_colorNormal="@color/Yellow"
            app:fab_colorPressed="@color/YellowDark"
            app:fab_label="@string/add_random_player"
            app:fab_size="mini"
            app:layout_constraintBottom_toTopOf="@id/btNextWords"
            app:layout_constraintRight_toRightOf="parent" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.constraintlayout.widget.ConstraintLayout>
