<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sergey.shlypa2.screens.game.RoundResultFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvRoundNumber"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_huge"
        android:gravity="center"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRoundResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btNextRound"
        app:layout_constraintTop_toBottomOf="@+id/tvRoundNumber" />

    <Button
        android:id="@+id/btNextRound"
        style="@style/btNextStyle"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
