<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sergey.shlypa2.screens.game.TurnResultFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWordsTurnResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btFinishTurn"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tvNoAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btFinishTurn"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/no_answers"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btFinishTurn"
        style="@style/btNextStyle"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
